examples/deploying/k8s/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  labels:
    app.kubernetes.io/name: web
    app.kubernetes.io/component: web
    app.kubernetes.io/part-of: waylon
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 0
  selector:
    matchLabels:
      app.kubernetes.io/component: web
      app.kubernetes.io/part-of: waylon
  template:
    metadata:
      labels:
        app.kubernetes.io/name: web
        app.kubernetes.io/component: web
        app.kubernetes.io/part-of: waylon
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
      volumes:
      - name: tmpvol
        emptyDir: {}
      containers:
      - name: web
        # This MUST be set to a real image
        image: MISSING
        imagePullPolicy: IfNotPresent
        stdin: true
        tty: true
        args: ["web"]
        resources:
          limits:
            memory: 256Mi
            cpu: 250m
          requests:
            memory: 64Mi
            cpu: 10m
        livenessProbe:
          tcpSocket:
            port: waylon
          timeoutSeconds: 2
          initialDelaySeconds: 2
          periodSeconds: 2
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /ping
            port: waylon
          timeoutSeconds: 6
          initialDelaySeconds: 2
          periodSeconds: 10
          failureThreshold: 3
        ports:
        - name: waylon
          containerPort: 9292
          protocol: TCP
        volumeMounts:
        - mountPath: /tmp
          name: tmpvol
        securityContext:
          allowPrivilegeEscalation: false
          privileged: false
          runAsNonRoot: true
          readOnlyRootFilesystem: true
          capabilities:
            drop:
              - all
