examples/deploying/k8s/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  labels:
    app.kubernetes.io/name: worker
    app.kubernetes.io/component: worker
    app.kubernetes.io/part-of: waylon
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 0
  selector:
    matchLabels:
      app.kubernetes.io/component: worker
      app.kubernetes.io/part-of: waylon
  template:
    metadata:
      labels:
        app.kubernetes.io/name: worker
        app.kubernetes.io/component: worker
        app.kubernetes.io/part-of: waylon
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
      volumes:
      - name: tmpvol
        emptyDir: {}
      containers:
      - name: worker
        # This MUST be set to a real image
        image: MISSING
        imagePullPolicy: IfNotPresent
        stdin: true
        tty: true
        args: ["worker"]
        resources:
          limits:
            memory: 768Mi
            cpu: 500m
          requests:
            memory: 64Mi
            cpu: 20m
        livenessProbe:
          tcpSocket:
            port: waylon
          timeoutSeconds: 2
          initialDelaySeconds: 2
          periodSeconds: 2
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /ping
            port: waylon
          timeoutSeconds: 6
          initialDelaySeconds: 2
          periodSeconds: 10
          failureThreshold: 3
        ports:
        - name: waylon
          containerPort: 9292
          protocol: TCP
        volumeMounts:
        - mountPath: /tmp
          name: tmpvol
        securityContext:
          allowPrivilegeEscalation: false
          privileged: false
          runAsNonRoot: true
          readOnlyRootFilesystem: true
          capabilities:
            drop:
              - all
