examples/deploying/k8s/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  labels:
    app.kubernetes.io/name: web
    app.kubernetes.io/component: service
    app.kubernetes.io/part-of: waylon
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 9292
    protocol: TCP
    name: waylon
  selector:
    app.kubernetes.io/component: web
    app.kubernetes.io/part-of: waylon
