examples/deploying/k8s/web-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web
  labels:
    app.kubernetes.io/name: web
    app.kubernetes.io/component: ingress
    app.kubernetes.io/part-of: waylon
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/preserve-host: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt
    cert-manager.io/acme-challenge-type: http01
spec:
  rules:
  # This needs to be a real name accessible from the Internet
  - host: foo.bar
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: waylon
            port:
              name: waylon
  tls:
  - hosts:
    # This needs to be a real name accessible from the Internet, same as above
    - foo.bar
    secretName: web-ingress-tls
